--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "**/*": "prettier . --write --ignore-unknown"
+    "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
