--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "next-auth": "5.0.0-beta.18",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
